# auto-news

./: .env.template  pyproject.toml
docker/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/: llm_agent.py  llm_prompts.py  ops_deepdive.py
