[tool.poetry]
name = "auto-news"
version = "0.1.0"
description = ""
authors = ["Yuzhang Hu <hyzwowtools@gmail.com>"]
readme = "README.md"
packages = [{include = "auto-news"}]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "*"
pytz = "*"
requests = "*"
langchain = "*"
langchain-google-genai = "*"
transformers = "*"
pillow = "*"
tiktoken = "*"
openai = "*"
bs4 = "*"
fake_useragent = "*"
notion-client = "*"
tweepy = "*"
mysql-connector-python = "*"
redis = "*"
youtube-transcript-api = "*"
pytube = "*"
llama-index = ">=0.9.*"
chromadb = "==0.4.22"
pymilvus = "2.3.5"
pinecone-client = "*"
feedparser = "*"
SpeechRecognition = "*"
pyttsx3 = "*"
soundfile = "*"
openai-whisper = "*"
yt-dlp = "*"
arxiv = "*"
pymupdf = "*"
pyautogen = "==0.2.2"
SQLAlchemy = "==2.0.8"
docker = "*"
duckduckgo_search = "*"
lingua-language-detector = "*"
httpx = {extras = ["socks"], version = "*"}
httpcore = ">=1.*"