[tool.poetry]
name = "auto-news"
version = "0.1.0"
description = ""
authors = ["Yuzhang Hu <hyzwowtools@gmail.com>"]
readme = "README.md"
packages = [{include = "auto-news"}]


[tool.poetry.dependencies]
python-dotenv = "*"
pytz = "*"
requests = "*"
langchain = "*"
langchain-google-genai = "*"
transformers = "*"
pillow = "*"
tiktoken = "*"
openai = "*"
bs4 = "*"
fake_useragent = "*"
notion-client = "*"
tweepy = "*"
mysql-connector-python = "*"
redis = "*"
youtube-transcript-api = "*"
pytube = "*"
llama-index = "*"
chromadb = "*"
pymilvus = "*"
pinecone-client = "*"
feedparser = "*"
SpeechRecognition = "*"
pyttsx3 = "*"
soundfile = "*"
openai-whisper = "*"
yt-dlp = "*"
arxiv = "*"
pymupdf = "*"
pyautogen = "*"
SQLAlchemy = "*"
docker = "*"
duckduckgo_search = "*"
lingua-language-detector = "*"
httpx = {extras = ["socks"], version = "*"}
httpcore = ">=1.*"