[tool.poetry]
name = "auto-news"
version = "0.1.0"
description = "A personal news aggregator to pull information from multi-sources + LLM (ChatGPT) to help us read efficiently with less noise, the sources including Tweets, RSS, YouTube, Web Articles, Reddit, and random Journal notes."
authors = ["Yuzhang Hu <hyzwowtools@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.*"

python-dotenv = "==1.0.0"
pytz = ">=2023.*"
requests = "*"
langchain = ">=0.1.*"
langchain-google-genai = ">=0.0.9"
transformers = "<=4.37.*"
pillow = "<=10.2.0"
tiktoken = "<=0.6.*"
grpcio = ">=1.62.*"
openai = "<=1.12.*"
bs4 = "0.0.2"
fake-useragent = ">=1.4.0"
notion-client = ">=2.2.*"
tweepy = ">=4.14.*"
mysql-connector-python = ">=8.1.0"
redis = ">=5.0.0"
youtube-transcript-api = ">=0.6.*"
pytube = ">=15.0.0"
llama-index = "<=0.10.4"
chromadb = "<=0.4.13"
pymilvus = "<=2.2.*"
pinecone-client = "<=3.0.*"
feedparser = ">=6.0.10"
SpeechRecognition = "*"
pyttsx3 = "*"
soundfile = "*"
openai-whisper = "*"
yt-dlp = "*"
arxiv = "*"
pymupdf = "*"
pyautogen = "<=0.2.*"
SQLAlchemy = "<=2.0.8"
docker = "*"
duckduckgo_search = "*"
lingua-language-detector = "<=2.0.*"
httpx = {extras = ["socks"], version = "*"}
httpcore = ">=1.*"